Bug 1591353 - call ServiceWorkerShutdownBlocker::StopAcceptingPromises when ProfileManager exits r=asuth a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D55895